--- a/subPage.css/blog-archive.css
+++ b/subPage.css/blog-archive.css
@@ -292,6 +292,14 @@
   .blog-header h1 {
     font-size: 1.5em;
   }
+
+  .blog-section-title h2 {
+    font-size: 1em;
+  }
+
+  .latest-blogs-title {
+    font-size: 1.5em;
+  }
 }
 
 .pagination-container {
