--- a/indexCSS/profile-banner.css
+++ b/indexCSS/profile-banner.css
@@ -50,7 +50,7 @@
 
 .profile-h3 {
   text-align: left;
-  font-size: 2.5em;
+  font-size: var(--title-font);
   padding-bottom: 1em;
   margin-block-end: 0;
   margin-block-start: 0;
@@ -58,7 +58,7 @@
 
 .profile-p {
   text-align: justify;
-  font-size: 1.2em;
+  font-size: var(--text-font);
   margin-block-start: 0;
 }
 
@@ -142,12 +142,12 @@
   }
 
   .profile-h3 {
-    font-size: 1.8em;
+    font-size: var(--title-font);
     text-align: center;
   }
 
   .profile-p {
-    font-size: 1em;
+    font-size: var(--text-font);
     text-align: justify;
     opacity: 1;
     margin: 0.5em 0;
