--- a/subPage.css/about-us.css
+++ b/subPage.css/about-us.css
@@ -10,13 +10,16 @@
 .why-us-title h2 {
   font-size: var(--title-font);
   text-align: center;
+  margin-top: 1em;
+  margin-bottom: 2em;
 }
 
 .why-us-content {
   display: flex;
   flex-direction: row;
-  margin-bottom: 2em;
+  margin-bottom: 4em;
   justify-content: center;
+  gap: 6em;
 }
 
 .why-us-item {
@@ -24,7 +27,6 @@
   color: #333;
   max-width: 350px;
   text-align: justify;
-  margin: 1.5em;
 }
 
 .why-us-item-title {
@@ -103,27 +105,30 @@
   height: fit-content;
 }
 
+.work-process-wrapper {
+  border-left: 5px solid var(--primary-color);
+  padding-left: 0.7em;
+}
+
 .work-process-heading {
   margin-bottom: 3em;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 1em;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .work-process-title {
   margin: 0;
   margin-top: 1em;
   font-size: var(--title-font);
-  margin-left: 0.5em;
 }
 
 .work-process-subtitle {
   font-size: var(--text-font);
-  margin-left: 1em;
   margin-top: 0.2em;
   padding-top: 0.2em;
   color: #333;
-
   width: 65%;
   margin-bottom: 5em;
 }
