--- a/subPage.css/agrobiznis.css
+++ b/subPage.css/agrobiznis.css
@@ -68,7 +68,7 @@
 }
 
 .services-title-main {
-  font-size: 2.5em;
+  font-size: var(--title-font);
   color: #333;
   margin-bottom: 0.5em;
   text-align: center;
@@ -93,7 +93,7 @@
   align-items: flex-start;
   text-align: left;
   padding: 1.5em;
-  border-radius: 8px;
+  border-radius: 1.4em;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   background-color: #ffffff;
@@ -142,16 +142,22 @@
   text-align: center;
 }
 
+.development-strategy-header {
+  border-left: 5px solid var(--primary-color);
+  padding-left: 1em;
+}
+
 .development-strategy-title {
-  font-size: 2.5em;
+  font-size: var(--title-font);
   color: #333;
-  border-bottom: 3px solid var(--primary-color);
-  display: inline-block;
-  padding-bottom: 0.2em;
+  text-align: left;
 }
 
 .development-strategy-text {
   margin-top: 0;
+  font-size: var(--text-font);
+  text-align: left;
+  margin-bottom: 2em;
 }
 
 .development-strategy-container {
@@ -189,12 +195,6 @@
   color: #444;
   line-height: 1.6em;
   text-align: justify;
-}
-
-.development-strategy-text {
-  font-size: 1.2em;
-  text-align: justify;
-  padding-bottom: 1em;
 }
 
 .reversewhite {
